--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "sequelize-test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "nodemon --exec mocha tests/dbtests.js",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,13 @@
     "bootstrap": "^3.3.6",
     "express": "^4.13.4",
     "jade": "^1.11.0",
+    "jquery": "^2.2.0",
+    "method-override": "^2.3.5",
     "sequelize": "^3.19.2",
     "sqlite3": "^3.1.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "supertest": "^1.2.0"
   }
 }
